design a full website

--- a/index.html
+++ b/index.html
@@ -8,25 +8,36 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    
+    <div class="main">
+     
   <div class="header">
-      <h1>Rajshahi Mohila polytechnic</h1>
-  </div>  
-  <div class="menu">
-     <ul>
-         <li><a href="">Home</a></li>
-         <li><a href="">About us</a></li>
-         <li><a href="">News</a></li>
-         <li><a href="">Information</a></li>
-         <li><a href="">Gallary</a></li>
-         <li><a href="">Help Desk</a></li>
-     </ul>
-  </div>  
-  <div class="maincontent">
-     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Veritatis dicta doloribus temporibus quis perspiciatis alias cumque rem, ratione, commodi, eligendi et ducimus. Harum, cumque dolores nemo error a, ut suscipit rerum animi quidem laudantium consequatur officiis ipsa labore eum magni accusamus veniam nisi quis incidunt officia quos velit odit. Tempore consequatur perferendis, beatae adipisci ex unde tempora blanditiis consequuntur reprehenderit animi, quam alias fugit repudiandae culpa dolores minima deserunt cum cupiditate excepturi porro ipsa laudantium ducimus. Esse quibusdam distinctio quia porro incidunt magnam ea tenetur consectetur, doloribus laboriosam ducimus optio modi labore dicta minus maiores quis soluta dolores pariatur fugiat.</p>
-     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Veritatis dicta doloribus temporibus quis perspiciatis alias cumque rem, ratione, commodi, eligendi et ducimus. Harum, cumque dolores nemo error a, ut suscipit rerum animi quidem laudantium consequatur officiis ipsa labore eum magni accusamus veniam nisi quis incidunt officia quos velit odit. Tempore consequatur perferendis, beatae adipisci ex unde tempora blanditiis consequuntur reprehenderit animi, quam alias fugit repudiandae culpa dolores minima deserunt cum cupiditate excepturi porro ipsa laudantium ducimus. Esse quibusdam distinctio quia porro incidunt magnam ea tenetur consectetur, doloribus laboriosam ducimus optio modi labore dicta minus maiores quis soluta dolores pariatur fugiat.</p>
-  </div>  
-  <div class="footer">
-      design by......
-  </div>  
+    <h1>Rajshahi Mohila polytechnic</h1>
+</div>  
+<div class="menu">
+   <ul>
+       <li><a href="">Home</a></li>
+       <li><a href="">About us</a></li>
+       <li><a href="">News</a></li>
+       <li><a href="">Information</a></li>
+       <li><a href="">Gallary</a></li>
+       <li><a href="">Help Desk</a></li>
+   </ul>
+</div>
+<div class="scroll_news">
+<marquee behavior="" direction="">latest news: Agami 2 tarik thake practical exam.</marquee>
+</div>  
+<div class="maincontent">
+  <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Veritatis dicta doloribus temporibus quis perspiciatis alias cumque rem, ratione, commodi, eligendi et ducimus. Harum, cumque dolores nemo error a, ut suscipit rerum animi quidem laudantium consequatur officiis ipsa labore eum magni accusamus veniam nisi quis incidunt officia quos velit odit. Tempore consequatur perferendis, beatae adipisci ex unde tempora blanditiis consequuntur reprehenderit animi, quam alias fugit repudiandae culpa dolores minima deserunt cum cupiditate excepturi porro ipsa laudantium ducimus. Esse quibusdam distinctio quia porro incidunt magnam ea tenetur consectetur, doloribus laboriosam ducimus optio modi labore dicta minus maiores quis soluta dolores pariatur fugiat.</p>
+  <img src="cmt.png.jpg" alt="">
+  <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Veritatis dicta doloribus temporibus quis perspiciatis alias cumque rem, ratione, commodi, eligendi et ducimus. Harum, cumque dolores nemo error a, ut suscipit rerum animi quidem laudantium consequatur officiis ipsa labore eum magni accusamus veniam nisi quis incidunt officia quos velit odit. Tempore consequatur perferendis, beatae adipisci ex unde tempora blanditiis consequuntur reprehenderit animi, quam alias fugit repudiandae culpa dolores minima deserunt cum cupiditate excepturi porro ipsa laudantium ducimus. Esse quibusdam distinctio quia porro incidunt magnam ea tenetur consectetur, doloribus laboriosam ducimus optio modi labore dicta minus maiores quis soluta dolores pariatur fugiat.</p>
+</div>  
+<div class="footer">
+    design by......
+</div>     
+ </div>
+
+
+
 </body>
 </html>
